--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev -p 8000",
     "build": "next build",
-    "start": "next start -p 8000"
+    "start": "next start -p 8000",
+    "export": "npm run build && next export -o _static"
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
