--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^10.1.2",
     "next-redux-wrapper": "^6.0.2",
     "null-loader": "3.0.0",
+    "papaparse": "^5.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.3",
@@ -34,7 +35,5 @@
     "html-webpack-plugin": "^5.3.1",
     "webpack": "^4.4.2",
     "webpack-dev-server": "^3.11.2"
-    
   }
-  
 }
