--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.3.1",
